@@ -9,8 +9,6 @@
   - show complete account tree as a popup-submenu of the applet
   - make library modules more independent, so only a few are imported
 - run unit tests on built libraries instead of installed ones
-- only copy/paste entries with keyboard shortcut when tree has focus
-  (ctrl-c should copy selected label in dataview when focused)
 
 0.5.x:
 - ensure complete UTF-8 support
