@@ -12,7 +12,6 @@ AM_INIT_AUTOMAKE(revelation, 0.4.1)
 
 dnl check for dependencies
 AC_PROG_CC()
-
 RVL_PYTHON_PATH(2.3)
 RVL_PYTHON_MODULE(Crypto, yes)
 PKG_CHECK_MODULES(PYGTK, pygtk-2.0 >= 2.3.90)
